compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__bit_array_segment_type_does_not_allow_unit_codepoint_utf16.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 115
expression: "let x = <<1:utf16_codepoint-unit(5)>> x"
snapshot_kind: text
---
----- SOURCE CODE
let x = <<1:utf16_codepoint-unit(5)>> x

----- ERROR
error: Invalid bit array segment
  ┌─ /src/one/two.gleam:1:13
  │
1 │ let x = <<1:utf16_codepoint-unit(5)>> x
  │             ^^^^^^^^^^^^^^^ Unit cannot be specified here

Hint: utf16_codepoint segments are sized based on their value and cannot
have a unit.
See: https://tour.gleam.run/data-types/bit-arrays/
